[tool.poetry]
name = "aries_python"
version = "0.1.0"
description = "An unofficial telnet wrapper for \"ARIES / LYNX\" motor controller by Kohzu Precision Co.,Ltd."
authors = ["Your Name <you@example.com>"]
license = "Zlib"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
