[tool.poetry]
name = "aries_python"
version = "0.1.4"
description = "An unofficial telnet wrapper for \"ARIES / LYNX\" motor controller by Kohzu Precision Co.,Ltd."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
license = "Zlib"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
