[tool.poetry]
name = "aries_controller"
version = "0.6.0"
description = "An unofficial telnet wrapper for \"ARIES / LYNX\" motor controller by Kohzu Precision Co.,Ltd."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/2-propanol/aries_controller"
license = "Zlib license"
packages = [
    { include = "aries.py" },
]
exclude = [".docs/*"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
aries = "aries:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
